opam-version: "2.0"
version: "1.2"
synopsis: "A fork of the official DBM package"
description: """A fork of the DBM package, ported to dune and fixed so that it compiles in the Jane eco-system without warnings

Forked from https://github.com/ocaml/dbm"""
maintainer: "Michael Bacarella <michael.bacarella@gmail.com>"
authors: ["Francois Rouaix"]
homepage: "https://github.com/mbacarella/dbm"
bug-reports: "https://github.com/mbacarella/dbm/issues"
dev-repo: "git+https://github.com/mbacarella/dbm.git"
license: "LGPL-v2 with OCaml linking exception"
build: ["dune" "build" "-p" name "-j" jobs]
depends: ["jbuilder" {build & >= "1.0+beta17"}]
depexts: [
  [["debian"] ["libgdbm-dev"]]
  [["ubuntu"] ["libgdbm-dev"]]
  [["nixpkgs"] ["gdbm"]]
  [["centos"] ["gdbm-devel"]]
  [["rhel"] ["gdbm-devel"]]
  [["fedora"] ["gdbm-devel"]]
  [["alpine"] ["gdbm-dev"]]
  [["osx" "homebrew"] ["gdbm"]]
  [["archlinux"] ["gdbm"]]
]
