(library
  (name            dbm)
   (public_name     dbm)
   (synopsis        "Access to GDBM/NDBM databases")
   (modules         dbm)
   (c_names         cldbm)
   (c_flags         (:include c-flags.sexp))
   (c_library_flags (:include c-library-flags.sexp))
   (wrapped         false)
   (libraries       base core)
   (inline_tests)
   (preprocess     (pps ppx_inline_test)))

(rule
  (targets c-flags.sexp c-library-flags.sexp)
   (deps    configure)
   (mode    fallback)
   (action  (run "sh" "-c" "./configure --quiet")))
